@@ -1,3 +1,10 @@
+Fri Oct  4 19:02:01 2013  Aman Gupta <ruby@tmm1.net>
+
+	* gc.c (objspace_free_num): new method for available/free slots on
+	  heap. [ruby-core:57633] [Bug #8983]
+	* gc.c (gc_stat): change heap_free_num definition to use new method.
+	* test/ruby/test_gc.rb: test for above.
+
 Fri Oct  4 18:53:42 2013  Aman Gupta <ruby@tmm1.net>
 
 	* gc.c: add rb_objspace.limit to keep accurate count of total heap
